# AutoResearch-Timeseries

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py
data/raw/: tsla_daily_yahoo_2018_to_2026-03-10.csv
scripts/: log_result.py
src/autoresearch_futures/: __init__.py  data.py  eval.py  settings.py
