[project]
name = "autoresearch-futures"
version = "0.1.0"
description = "Automated futures time-series research harness with Granite TSPulse"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "granite-tsfm==0.3.5",
    "numpy>=2.2.6,<3",
    "pandas>=2.3.3,<4",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7,<1.8",
    "torch>=2.10,<2.11",
]
